--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,26 @@
 @media screen and (max-width: 600px) {
   .Navbar_Buttons_Desktop:not(:first-child) {display: none;}
   .Navbar_Buttons_Mobile{display: block;}
+
+  .youtube_video_insert{
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    border: 2px solid #FFFFFF;
+  }
+
+  .youtube_video_loader{
+    border: 0;
+  }
+
+  .youtube_video, .youtube_video_loader{
+    border: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
