--- a/css/etiquetas.css
+++ b/css/etiquetas.css
@@ -51,19 +51,15 @@ li{
 
 /* Acordeon con details */
 summary{
-	color: /*#00FF00*/ #AAAAAA;
-	/*
-	background-color: #000000;
-	border: 2px solid #00FF00;
-	*/
+	color: #AAAAAA;
 	margin-left: 30%;
 	margin-right: 30%;
-	/*background-image: linear-gradient(to right, rgba(0,255,0,0), #00FF00, rgba(0,255,0,0));*/
 	font-weight: bold;
 	cursor: pointer;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	list-style-type: none;
+	text-align: center;
 }
 
 summary h2{	
@@ -77,8 +73,8 @@ summary h2:hover{
 }
 
 details{
-	margin: 15px 5px;
-	padding: 5px;
+	margin: 15px 5%;
+	padding: 5px 30px;
 	background-color: var(--section_color);
 	border: 3px solid var(--section_border);
 }
