--- a/css/etiquetas.css
+++ b/css/etiquetas.css
@@ -19,6 +19,7 @@ body{
 h1, h2, h3, h4, h5, h6{
 	color: var(--title_color);
 	font-family: var(--font-title), monospace;
+	text-align:center;
 }
 
 p{
@@ -73,7 +74,14 @@ summary h2:hover{
 }
 
 details{
-	margin: 15px 5%;
+	margin: 15px 2%;
+	padding: 5px 30px;
+	background-color: var(--section_color);
+	border: 3px solid var(--section_border);
+}
+
+article{
+	margin: 15px 2%;
 	padding: 5px 30px;
 	background-color: var(--section_color);
 	border: 3px solid var(--section_border);
