--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url("css/root.css");
 
+@import url("css/animations.css");
+
 @import url("css/etiquetas.css");
 
 @import url("css/clases.css");
