--- a/css/clases.css
+++ b/css/clases.css
@@ -287,6 +287,7 @@ ul.code_box{
 }
 
 .article_content_background{
+	border: 2px solid #FFFFFF;
 	padding:1%;
 	box-shadow: inset 0 0 0 99999px rgba(0,0,0,0.5);
 }
