--- a/css/clases.css
+++ b/css/clases.css
@@ -6,6 +6,12 @@
 	margin-right: auto;
 }
 
+@media screen and (max-width: 600px) {
+	.imagen{
+		width: 95%;
+	}
+}
+
 .center{
 	/*display: block;*/
 	margin-left: auto;
@@ -95,25 +101,32 @@ ul.code_box{
 	background-image: linear-gradient(#000019,#000066, #000019);
 }
 
-.youtube_video{
+.youtube-video-container {
+	margin: auto;
 	border: 2px solid #FFFFFF;
+	position: relative;
+	overflow: hidden;
+	width: 50%;
 }
 
-.videowrapper {
-    float: none;
-    clear: both;
-    width: 90%;
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 25px;
-    height: 0;
+@media screen and (max-width: 800px) {
+	.youtube-video-container{
+		width: 100%;
+	}
 }
-.videowrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+
+.youtube-video-container::after {
+	display: block;
+	content: "";
+	padding-top: 56.25%;
+}
+
+.youtube-video-container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .text_green{
