--- a/css/clases.css
+++ b/css/clases.css
@@ -6,11 +6,24 @@
 	margin-right: auto;
 }
 
+.imagen_small{
+	width: 50%;
+	border: 2px solid #FFFFFF;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 @media screen and (max-width: 600px) {
 	.imagen{
 		width: 95%;
 	}
+
+	.imagen_small{
+		width: 95%;
+	}
 }
+
 
 .center{
 	/*display: block;*/
