--- a/css/etiquetas.css
+++ b/css/etiquetas.css
@@ -51,7 +51,7 @@ li{
 }
 
 /* Acordeon con details */
-summary{
+.details_article summary{
 	color: #AAAAAA;
 	margin-left: 30%;
 	margin-right: 30%;
@@ -63,18 +63,18 @@ summary{
 	text-align: center;
 }
 
-summary h2{	
+.details_article summary h2{	
 	color: var(--section_button_color);
 	font-family: var(--font-details), monospace;
 	
 }
-summary h2:hover{
+.details_article summary h2:hover{
 	color: var(--section_button_color_hover);
 	text-decoration: underline;
 }
 
 
-details{
+.details_article{
 	margin: 15px 2%;
 	padding: 5px 30px;
 	background-color: var(--section_color);
@@ -90,7 +90,7 @@ article{
 
 /*Tamaños para moviles*/
 @media screen and (max-width: 600px) {
-	details{
+	.details_article{
 		margin: 15px 5px;
 	}
 	article{
