--- a/css/etiquetas.css
+++ b/css/etiquetas.css
@@ -1,3 +1,8 @@
+/*
+etiquetas.css:
+estilos de elementos sueltos (a, li, p, etc)
+*/
+
 body{	
 	
 	background-image: var(--background_image);
@@ -48,52 +53,4 @@ li{
 	padding-right: 30px;
 	list-style-type: square;
 	color: var(--navbar_link);
-}
-
-/* Acordeon con details */
-.details_article summary{
-	color: #AAAAAA;
-	margin-left: 30%;
-	margin-right: 30%;
-	font-weight: bold;
-	cursor: pointer;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	list-style-type: none;
-	text-align: center;
-}
-
-.details_article summary h2{	
-	color: var(--section_button_color);
-	font-family: var(--font-details), monospace;
-	
-}
-.details_article summary h2:hover{
-	color: var(--section_button_color_hover);
-	text-decoration: underline;
-}
-
-
-.details_article{
-	margin: 15px 2%;
-	padding: 5px 30px;
-	background-color: var(--section_color);
-	border: 3px solid var(--section_border);
-}
-
-article{
-	margin: 15px 2%;
-	padding: 5px 30px;
-	background-color: var(--section_color);
-	border: 3px solid var(--section_border);
-}
-
-/*Tamaños para moviles*/
-@media screen and (max-width: 600px) {
-	.details_article{
-		margin: 15px 5px;
-	}
-	article{
-		margin: 15px 5px;
-	}
 }
