--- a/css/article.css
+++ b/css/article.css
@@ -74,7 +74,7 @@ article{
 .article_content_background{
 	border: 2px solid #FFFFFF;
 	padding:1%;
-	box-shadow: inset 0 0 0 99999px rgba(0,0,0,0.5);
+	box-shadow: inset 0 0 0 99999px var(--article-contents-shadow);
 }
 .article_content{
 	position: relative;
