Actualice index.html con informacion acerca de sucesos sobre cosas... y coso

--- a/css/article.css
+++ b/css/article.css
@@ -65,7 +65,7 @@ article{
 	background:black url('../images/backgrounds/UACArena.png') no-repeat center;
 }
 .article_mods_randommaps{
-
+	background: black url('../images/bg_mods.png') no-repeat center;
 }
 .article_mods_negativeone{
 	background:black url('../images/backgrounds/Negativeone.png') no-repeat center;
