--- a/css/etiquetas.css
+++ b/css/etiquetas.css
@@ -37,3 +37,10 @@ li{
 	list-style-type: square;
 	color: var(--navbar_link);
 }
+
+audio {
+	max-height: 100%;
+	max-width: 100%;
+	margin: auto;
+	object-fit: contain;
+}
