--- a/css/images.css
+++ b/css/images.css
@@ -5,7 +5,6 @@ estilos relacionados con las imagenes
 
 .imagen{
 	width: 90%;
-	border: 2px solid #FFFFFF;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -13,7 +12,7 @@ estilos relacionados con las imagenes
 
 .imagen_small{
 	width: 50%;
-	border: 2px solid #FFFFFF;
+	
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -21,12 +20,21 @@ estilos relacionados con las imagenes
 
 @media screen and (max-width: 600px) {
 	.imagen{
-		width: 95%;
+		/*width: 95%;*/
+		width: 100%;
+		height: auto;
+		object-fit: contain;
 	}
 
 	.imagen_small{
 		width: 95%;
+		height: auto;
+		object-fit: contain;
 	}
+}
+
+.borde {
+	border: 2px solid #FFFFFF;
 }
 
 .titleImg{
