--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 @import url("css/clases.css");
 @import url("css/fuentes.css");
 
+@import url("css/textos.css");
 @import url("css/body.css");
 @import url("css/navbar.css");
 @import url("css/article.css");
