Algunas modificaciones pequeñas al sitio, debo rehacerlo alguna vez, tal vez React o que se yo

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -80,9 +80,12 @@ estilos relacionados con la barra superior de navegacion y el footer
 }
 
 #navbar_title_desktop{
+	/*
 	display:flex;
 	flex-direction: row;
 	justify-content: space-between;
+	*/
+	display:block;
 }
 
 #navbar_title_mobile{
