--- a/css/navbar.css
+++ b/css/navbar.css
@@ -116,9 +116,10 @@ estilos relacionados con la barra superior de navegacion y el footer
 /* ===== Footer ===== */
 .Footer{
 	background-color: #050505;
-	border-top: 2px solid var(--border_color);
-	margin-top:50px;
-	padding-bottom:10px;
+	border: 2px solid var(--section_border);
+	margin:1%;
+	margin-top: 20px;
+	padding-bottom:0px;
 }
 
 .Footer hr{
