--- a/src/_includes/layouts/base_en.html
+++ b/src/_includes/layouts/base_en.html
@@ -12,7 +12,22 @@
 		{% include "partials/navbar_en.html" %}
 
 		<main tabindex="-1" id="main-content">
-			<h1>{{ header }}</h1>
+			<h1>
+				{% if header_image %}  
+				<img src="{{ header_image }}" class="imagen_small">  
+				{% else %} 
+				{{ header }} 
+				{% endif %} 
+			</h1>
+
+			{% if back_title %}
+
+			<p class="go_back_link">
+				 <<< <a href="{{back_url}}">Back to: {{back_title}}</a>
+			</p> 
+
+			{% endif %}
+
 			<article>
 				{{ content | safe }}
 			</article>
