--- a/src/_includes/layouts/base_es.html
+++ b/src/_includes/layouts/base_es.html
@@ -12,7 +12,13 @@
 		{% include "partials/navbar_es.html" %}
 
 		<main tabindex="-1" id="main-content">
-			<h1>{{ header }}</h1>
+			<h1>
+				{% if header_image %}  
+				<img src="{{ header_image }}" class="imagen_small">  
+				{% else %} 
+				{{ header }} 
+				{% endif %} 
+			</h1>
 
 			{% if back_title %}
 
