--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -13,12 +13,12 @@
                                     '.svg?color=00ffff&labelColor=000000&logo=godotengine&style=for-the-badge"/></a>';
         }
         else{
-            //counter.innerHTML = "<p class='SmallP'>Contador deshabilitado por si no esta subido</p>"
-            counter.innerHTML = ""
+            counter.innerHTML = "<p class='SmallP'>Contador deshabilitado por si no esta subido</p>"
+            //counter.innerHTML = ""
         }
     </script>
 
-    <img src="/images/buttons/doombut.gif" alt="" srcset="">
-    <img src="/images/buttons/touhouproject.gif" alt="" srcset="">
+    <!--img src="/images/buttons/doombut.gif" alt="" srcset="">
+    <img src="/images/buttons/touhouproject.gif" alt="" srcset=""-->
     </p>
 </footer>
