Arreglado lo del menu en mobile

--- a/src/_includes/partials/navbar_es.html
+++ b/src/_includes/partials/navbar_es.html
@@ -11,7 +11,7 @@
 </ul>
 <details class="Navbar_Buttons_Mobile">
     <summary><p style="display:inline">Expandir</p></summary>
-    {% for item in navigation.items %}
+    {% for item in navigation_es.items %}
     <p><a href="{{ item.url }}" target="_parent">{{ item.text }}</a></p>
     {% endfor %}
     <p>---</p>
