--- a/src/_includes/partials/navbar_en.html
+++ b/src/_includes/partials/navbar_en.html
@@ -11,12 +11,12 @@
 </ul>
 <details class="Navbar_Buttons_Mobile">
     <summary><p style="display:inline">Expand</p></summary>
-    {% for item in navigation.items %}
+    {% for item in navigation_en.items %}
     <p><a href="{{ item.url }}" target="_parent">{{ item.text }}</a></p>
     {% endfor %}
     <p>---</p>
     <p class="idioma">
-        <i class="fa-solid fa-language"></i><a href="/es/">español</a>
+        <i class="fa-solid fa-language"></i><a href="/es/"> español</a>
     </p>
 </details>
 {% endblock %}
