Added feed metadata to the HTMLs

--- a/src/_includes/layouts/base_en.html
+++ b/src/_includes/layouts/base_en.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/css/main.css">
+		<link href="/en/feed.xml" rel="alternate" title="Urrova's RSS (Atom) feed" type="application/atom+xml">
 		<script src="https://kit.fontawesome.com/f9565b969b.js"></script>
 		<title>{{ title }}</title>
 
